tests/typing/errors/mcil/repeated_input.mcil
(set-logic ALL)

(define-system S1
  :input ((x Int))
  :input ((y Int))
)